# codex-performance-monitor

./: .gitignore  LICENSE  README.md  pyproject.toml  run.ps1
.github/workflows/: ci.yml
docs/: README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.zh-CN.md
scripts/: build-exe.ps1  validate.ps1
src/: codex_monitor_app.py
